Fix queries
